# waterinsight-export

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
src/watersight_export/: __init__.py  ha_publisher.py  influxdb_writer.py  main.py  mqtt_publisher.py  watersight_client.py
